--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,7 +26,7 @@ const { title } = Astro.props;
     />
     <link rel="icon" type="image/svg+xml" href="/assets/sites-thumbnails/spaceport.webp" />
   </head>
-  <body>
+  <body class="overflow-y-scroll overflow-x-hidden">
     <slot />
   </body>
 </html>
