--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,6 +25,8 @@ const { title } = Astro.props;
       itemprop="description"
     />
     <link rel="icon" type="image/svg+xml" href="/assets/sites-thumbnails/spaceport.webp" />
+    <!-- <script src="/src/pwa.ts"></script>
+    {pwaInfo && <Fragment set:html={pwaInfo.webManifest.linkTag} />} -->
   </head>
   <body class="overflow-y-scroll overflow-x-hidden">
     <slot />
