--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import "./base.css";
+import { pwaInfo } from "virtual:pwa-info";
 
 export interface Props {
   title: string;
@@ -25,8 +26,8 @@ const { title } = Astro.props;
       itemprop="description"
     />
     <link rel="icon" type="image/svg+xml" href="/assets/sites-thumbnails/spaceport.webp" />
-    <!-- <script src="/src/pwa.ts"></script>
-    {pwaInfo && <Fragment set:html={pwaInfo.webManifest.linkTag} />} -->
+    <script src="/src/pwa.ts"></script>
+    {pwaInfo && <Fragment set:html={pwaInfo.webManifest.linkTag} />}
   </head>
   <body class="overflow-y-scroll overflow-x-hidden">
     <slot />
